# pico_hrm_integrity

./: .gitignore  README.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/src/: main.c  model_weights.h
hospital_sim/: hospital_monitor.py
training/: train_tinyml.ipynb
